# crossroads

./: .gitignore  Dockerfile  README.md  modal_app.py  pyproject.toml
crossroads/: __init__.py  api.py  compare.py  household.py  metadata.py
crossroads/events/: __init__.py  base.py  child_aging_out.py  divorce.py  job_change.py  losing_esi.py  marriage.py  medicare_transition.py  move.py  new_child.py  pregnancy.py  retirement.py  unemployment.py
frontend/: .env.example  package-lock.json
frontend/public/: robots.txt
frontend/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
frontend/src/app/api/cliff/: route.ts
frontend/src/app/api/simulate/: route.ts
frontend/src/components/: CliffChart.tsx  Header.tsx  HouseholdForm.tsx  LifeEventSelector.tsx  ResultsView.tsx
frontend/src/types/: index.ts
tests/: __init__.py  test_compare.py  test_household.py
